src/objects/AM_Asset__c.object
<CustomObject>
    <fields>
        <fullName>AM_Available_From__c</fullName>
        <label>Available From</label>
        <summarizedField>AM_Asset_Allocation__c.AM_End_Date__c</summarizedField>
        <summaryForeignKey>AM_Asset_Allocation__c.AM_Asset__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AM_Available_for_allocation__c</fullName>
        <formula>OR(ISNULL( AM_Available_From__c ),  AM_Available_From__c &lt; NOW())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available for allocation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AM_Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AM_ID__c</fullName>
        <description>External ID for the asset</description>
        <externalId>true</externalId>
        <label>ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AM_Location__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Location</label>
        <referenceTo>AM_Location__c</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AM_Out_of_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Out of Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AM_Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AM_Status__c</fullName>
        <description>Describes the status of an asset</description>
        <formula>IF( AND(AM_Available_for_allocation__c, !AM_Out_of_Service__c ), &quot;Available&quot;, IF(  AM_Out_of_Service__c  ,&quot;Broken&quot; , &quot;Assigned&quot;))</formula>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AM_Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Computer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Peripherals</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FileVault__c</fullName>
        <label>FileVault</label>
        <length>30</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <picklist>
            <picklistValues>
                <fullName>Computer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iPhone headphones</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Keyboard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mac charger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Network adapters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platronic headphones</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <label>Serial Number</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>AM_Asset</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>AM_Location__c</columns>
        <columns>AM_Price__c</columns>
        <columns>AM_Comments__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>AM_Out_of_Service__c</columns>
        <columns>AM_Status__c</columns>
        <columns>AM_Available_for_allocation__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{00000000}</displayFormat>
        <label>Asset Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assets</pluralLabel>
    <recordTypes>
        <fullName>Apartment</fullName>
        <active>true</active>
        <description>Record Type for Apartments</description>
        <label>Apartment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Device</fullName>
        <active>true</active>
        <description>Record Type for a device</description>
        <label>Device</label>
    </recordTypes>
    <recordTypes>
        <fullName>Locker</fullName>
        <active>true</active>
        <label>Locker</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Numeric</fullName>
        <active>true</active>
        <errorConditionFormula>!REGEX(  Serial_Number__c  , &quot;^[a-zA-Z0-9_]*$&quot;)</errorConditionFormula>
        <errorDisplayField>Serial_Number__c</errorDisplayField>
        <errorMessage>Only alphanumeric characters!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validation_Type</fullName>
        <active>true</active>
        <errorConditionFormula>(!ISPICKVAL(Name__c, &quot;Computer&quot;) &amp;&amp; ISPICKVAL(AM_Type__c , &quot;Computer&quot;)) ||  (!ISPICKVAL(Name__c, &quot;Mobile Phone&quot;) &amp;&amp; ISPICKVAL(AM_Type__c, &quot;Mobile Phone&quot;)) || (ISPICKVAL(Name__c, &quot;Computer&quot;) &amp;&amp; (ISPICKVAL(AM_Type__c , &quot;Peripherals&quot;))) || (ISPICKVAL(Name__c, &quot;Mobile Phone&quot;) &amp;&amp; (ISPICKVAL(AM_Type__c , &quot;Peripherals&quot;)))</errorConditionFormula>
        <errorDisplayField>AM_Type__c</errorDisplayField>
        <errorMessage>NAME ERROR OR TYPE</errorMessage>
    </validationRules>
</CustomObject>